# rossa

./: .gitignore  README.md  basic.xml  pyproject.toml
demonstration/: .gitignore  CMakeLists.txt  README.md  clean.sh  matching.ipynb  run_and_generate_plots.sh  setup.sh  sim-model-toy-sample.hpp  sim-model.hpp  sim-model4.hpp  sim.cpp
demonstration/instances/example/: example-topology.json  instances.toml  model_configuration.toml
demonstration/instances/experiment_1/: instances.toml  model_configuration.toml
demonstration/instances/experiment_1_smc_5000/: model_configuration.toml
demonstration/instances/experiment_1_smc_6000/: model_configuration.toml
demonstration/instances/experiment_1_smc_7000/: model_configuration.toml
demonstration/instances/experiment_2/: instances.toml  model_configuration.toml
demonstration/instances/experiment_2_smc_5000/: instances.toml  model_configuration.toml
demonstration/instances/experiment_2_smc_6000/: instances.toml  model_configuration.toml
demonstration/instances/experiment_2_smc_7000/: instances.toml  model_configuration.toml
demonstration/instances/paper_1/: instances.toml  model_configuration.toml
demonstration/instances/paper_2/: instances.toml  model_configuration.toml
demonstration/instances/paper_3/: instances.toml  model_configuration.toml
demonstration/instances/paper_4/: instances.toml  model_configuration.toml
demonstration/instances/paper_5/: instances.toml  model_configuration.toml
demonstration/instances/paper_6/: instances.toml  model_configuration.toml
demonstration/schedulers/: .clang-format  .gitignore  CMakeLists.txt  README.md
demonstration/schedulers/capacity/: CMakeLists.txt  ext.cpp
demonstration/schedulers/ext/: CMakeLists.txt  ext.cpp  ext.hpp
demonstration/schedulers/fixed/: CMakeLists.txt  graph_ext.cpp
demonstration/schedulers/rnd_choice/: CMakeLists.txt  graph_ext.cpp
demonstration/schedulers/rotor_lb/: CMakeLists.txt  ext.cpp
demonstration/schedulers/script/: copy_extension_libs.sh
demonstration/schedulers/tgraph/: CMakeLists.txt  temporal_graph.cpp  temporal_graph.hpp
demonstration/schedulers/valiant/: CMakeLists.txt  ext.cpp
demonstration/scripts/: common_plots_paper.py  run_instances.py
demonstration/traffic_flow/: CMakeLists.txt
demonstration/traffic_flow/ext/: CMakeLists.txt  traffic.cpp  traffic.hpp
demonstration/traffic_flow/gravity/: CMakeLists.txt  gravity_model.cpp  util.h
example/: config_sampling.toml  config_verify.toml
src/: .gitignore
src/rnetwork/: cli.py  cppsim.py  model.py  plotting.py  schedule.py  uppaal.py
src/rnetwork/data/: model_declarations.c  model_declarations_sampling.c  model_template.xml  sim-model.h
src/rossa/: cli.py  model.py  uppaal.py
src/rossa/data/: model_template.xml  sim-model.h
