[build-system]
requires = ["setuptools>=69.1.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rnetwork"
version = "0.6.0"
authors = [
  { name="Søren Enevoldsen", email="senevoldsen@cs.aau.dk" },
]
description = "A package for generating and plotting of simulated networks using optical rotor switches using UPPAAL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib~=3.8.3",
    "plumbum~=1.8.2",
    "tomli~=2.0.1",
]

[project.scripts]
rnetwork = "rnetwork.cli:RotorSwitchApp.run"

[tool.black]
line-length = 119
